[package]
authors = ["CESS LAB"]
edition = "2021"
license = "Unlicense"
name = "cess-node-runtime"
repository = "https://github.com/CESSProject/cess"
version = "0.5.3"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]

# third-party dependencies
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
	"derive",
	"max-encoded-len",
] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
hex-literal = { optional = true, version = "0.3.4" }

# primitives
sp-authority-discovery = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
cessp-consensus-rrsc = { version = "0.10.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
sp-block-builder = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
sp-inherents = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
sp-offchain = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
sp-core = { version = "7.0.0", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
sp-std = { version = "5.0.0", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
sp-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
sp-staking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
sp-session = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
sp-transaction-pool = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
sp-version = { version = "5.0.0", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
sp-io = { version = "7.0.0", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36"}

# frame dependencies
frame-executive = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", optional = true, branch = "cess-polkadot-v0.9.36" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
frame-system-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", optional = true, branch = "cess-polkadot-v0.9.36" }
frame-election-provider-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
frame-system-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
frame-try-runtime = { version = "0.10.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36", optional = true }
pallet-assets = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-authority-discovery = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-authorship = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-rrsc = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-bags-list = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-balances = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-bounties = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-child-bounties = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-collective = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-contracts = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-contracts-primitives = { version = "7.0.0", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-election-provider-multi-phase = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-grandpa = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-im-online = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-indices = {  version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-membership = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-mmr = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-offences = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-preimage = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-randomness-collective-flip = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-session = { version = "4.0.0-dev", default-features = false, features = ["historical"], git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-cess-staking = { default-features = false, path = "../c-pallets/staking", version = "4.0.0-dev" }
pallet-scheduler = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-sudo = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-timestamp = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-treasury = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-transaction-payment = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }
pallet-asset-tx-payment = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36" }

cp-scheduler-credit = { default-features = false, version = "0.1.0", path = "../primitives/scheduler-credit" }
pallet-scheduler-credit = { default-features = false, version = "0.1.0", path = "../c-pallets/scheduler-credit" }

# local dependencies
account = { path = "../primitives/account", default-features = false }
pallet-sminer = { default-features = false, path = "../c-pallets/sminer", version = "0.5.3" }
pallet-segment-book = { default-features = false, path = "../c-pallets/segment-book", version = "0.5.3" }
pallet-file-bank = { default-features = false, path = "../c-pallets/file-bank", version = "0.5.3" }
pallet-file-map = { default-features = false, path = "../c-pallets/file-map", version = "0.5.3" }
pallet-oss = { default-features = false, path = "../c-pallets/oss", version = "0.5.3" }

# Frontier
fp-rpc = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.36", default-features = false }
fp-self-contained = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.36", default-features = false }
pallet-base-fee = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.36", default-features = false }
pallet-dynamic-fee = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.36", default-features = false }
pallet-ethereum = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.36", default-features = false }
pallet-evm = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.36", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.36", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.36", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/CESSProject/frontier", branch = "cess-polkadot-v0.9.36", default-features = false }

# Cumulus dependencies
cumulus-pallet-dmp-queue = { git = "https://github.com/CESSProject/cumulus", branch = "cess-polkadot-v0.9.36", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/CESSProject/cumulus", branch = "cess-polkadot-v0.9.36", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/CESSProject/cumulus", branch = "cess-polkadot-v0.9.36", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/CESSProject/cumulus", branch = "cess-polkadot-v0.9.36", default-features = false }
cumulus-primitives-core = { git = "https://github.com/CESSProject/cumulus", branch = "cess-polkadot-v0.9.36", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/CESSProject/cumulus", branch = "cess-polkadot-v0.9.36", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/CESSProject/cumulus", branch = "cess-polkadot-v0.9.36", default-features = false }
pallet-collator-selection = { git = "https://github.com/CESSProject/cumulus", branch = "cess-polkadot-v0.9.36", default-features = false }
parachain-info = { git = "https://github.com/CESSProject/cumulus", branch = "cess-polkadot-v0.9.36", default-features = false }

# Nimbus Dependencies
nimbus-primitives = { git = "https://github.com/CESSProject/nimbus", branch = "cess-polkadot-v0.9.36", default-features = false }
pallet-author-inherent = { git = "https://github.com/CESSProject/nimbus", branch = "cess-polkadot-v0.9.36", default-features = false }
pallet-author-slot-filter = { git = "https://github.com/CESSProject/nimbus", branch = "cess-polkadot-v0.9.36", default-features = false }

# Polkadot Dependencies
pallet-xcm = { git = "https://github.com/CESSProject/polkadot", branch = "cess-release-v0.9.36", default-features = false }
polkadot-parachain = { git = "https://github.com/CESSProject/polkadot", branch = "cess-release-v0.9.36", default-features = false }
polkadot-runtime-common = { git = "https://github.com/CESSProject/polkadot", branch = "cess-release-v0.9.36", default-features = false }
xcm = { git = "https://github.com/CESSProject/polkadot", branch = "cess-release-v0.9.36", default-features = false }
xcm-builder = { git = "https://github.com/CESSProject/polkadot", branch = "cess-release-v0.9.36", default-features = false }
xcm-executor = { git = "https://github.com/CESSProject/polkadot", branch = "cess-release-v0.9.36", default-features = false }


[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/CESSProject/substrate.git", branch = "cess-polkadot-v0.9.36", version = "5.0.0-dev" }

[features]
default = ["std"]
with-tracing = ["frame-executive/with-tracing"]
std = [
    "cumulus-pallet-dmp-queue/std",
    "cumulus-pallet-parachain-system/std",
    "cumulus-pallet-xcm/std",
    "cumulus-pallet-xcmp-queue/std",
    "cumulus-primitives-core/std",
    "cumulus-primitives-timestamp/std",
    "cumulus-primitives-utility/std",
    "pallet-authority-discovery/std",
    "pallet-authorship/std",
    "pallet-bounties/std",
    "pallet-collator-selection/std",
    "pallet-collective/std",
    "pallet-election-provider-multi-phase/std",
    "pallet-im-online/std",
    "pallet-membership/std",
    "pallet-offences/std",
    "pallet-scheduler/std",
    "pallet-session/std",
    "pallet-cess-staking/std",
    "pallet-treasury/std",
    "pallet-file-bank/std",
    "pallet-segment-book/std",
    "pallet-sminer/std",
    "pallet-file-map/std",
		"pallet-oss/std",
    "pallet-preimage/std",
    "pallet-assets/std",
    "pallet-child-bounties/std",
    "pallet-mmr/std",
    "parachain-info/std",
    "polkadot-parachain/std",
    "polkadot-runtime-common/std",
    "sp-io/std",
    "pallet-indices/std",
    "sp-authority-discovery/std",
    "sp-staking/std",
    "codec/std",
	  "frame-try-runtime/std",
    "frame-benchmarking/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system-rpc-runtime-api/std",
    "frame-system/std",
    "pallet-rrsc/std",
    "pallet-bags-list/std",
    "pallet-balances/std",
    "pallet-grandpa/std",
    "pallet-randomness-collective-flip/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
    "pallet-contracts/std",
		"pallet-contracts-primitives/std",
    "scale-info/std",
    "sp-api/std",
    "sp-block-builder/std",
    "cessp-consensus-rrsc/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "fp-rpc/std",
		"fp-self-contained/std",
		"pallet-base-fee/std",
		"pallet-dynamic-fee/std",
		"pallet-ethereum/std",
		"pallet-evm/std",
		"pallet-evm-precompile-simple/std",
		"pallet-evm-precompile-sha3fips/std",
    "cp-scheduler-credit/std",
    "pallet-scheduler-credit/std",
    "nimbus-primitives/std",
    "pallet-author-inherent/std",
    "pallet-author-slot-filter/std",
    "xcm-builder/std",
    "xcm-executor/std",
    "xcm/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking",
    "frame-system/runtime-benchmarks",
    "hex-literal",
    "pallet-balances/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-collator-selection/runtime-benchmarks",
    "pallet-collective/runtime-benchmarks",
    "pallet-file-bank/runtime-benchmarks",
    "pallet-file-map/runtime-benchmarks",
		"pallet-oss/runtime-benchmarks",
    "pallet-cess-staking/runtime-benchmarks",
    "pallet-segment-book/runtime-benchmarks",
    "pallet-sminer/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "pallet-contracts/runtime-benchmarks",
    "pallet-ethereum/runtime-benchmarks",
		"pallet-evm/runtime-benchmarks",
    "pallet-xcm/runtime-benchmarks",
    "xcm-builder/runtime-benchmarks",
]
try-runtime = [
	"frame-executive/try-runtime",
	"frame-try-runtime",
	"frame-system/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-authority-discovery/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-rrsc/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-bounties/try-runtime",
	"pallet-child-bounties/try-runtime",
	"pallet-collective/try-runtime",
	"pallet-contracts/try-runtime",
	"pallet-election-provider-multi-phase/try-runtime",
	"pallet-grandpa/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-indices/try-runtime",
	"pallet-membership/try-runtime",
	"pallet-mmr/try-runtime",
	"pallet-offences/try-runtime",
	"pallet-preimage/try-runtime",
	"pallet-randomness-collective-flip/try-runtime",
	"pallet-scheduler/try-runtime",
	"pallet-session/try-runtime",
	"pallet-cess-staking/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-file-bank/try-runtime",
  "pallet-author-slot-filter/try-runtime",
]
