[package]
name = "pallet-audit"
authors = ["CESS LAB"]
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/CESSProject/cess"
description = "FRAME pallet for segment management"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde = { version = "1.0.136", optional = true }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { default-features = false, features = ['derive'], version = "2.0.1" }
log = { version = "0.4.14", default-features = false }
pallet-cess-staking = { path = '../staking', version = '4.0.0-dev', default-features = false }
pallet-preimage = { version = "4.0.0-dev", default-features = false, git = 'https://github.com/CESSProject/substrate', branch = "cess-polkadot-v0.9.42" }

# local pallet
cp-bloom-filter = { path = '../../primitives/bloom-filter', default-features = false }
cp-scheduler-credit = { path = '../../primitives/scheduler-credit', default-features = false }
cp-cess-common = { path = '../../primitives/common', default-features = false }
cp-enclave-verify = { path = '../../primitives/enclave-verify', default-features = false }
pallet-sminer-reward = { default-features = false, path = "../sminer-reward" }

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/CESSProject/substrate'
branch = "cess-polkadot-v0.9.42"
version = '4.0.0-dev'
optional = true

[dependencies.frame-support]
default-features = false
git = 'https://github.com/CESSProject/substrate'
branch = "cess-polkadot-v0.9.42"
version = '4.0.0-dev'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/CESSProject/substrate'
branch = "cess-polkadot-v0.9.42"
version = '4.0.0-dev'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/CESSProject/substrate'
branch = "cess-polkadot-v0.9.42"
version = '7.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/CESSProject/substrate'
branch = "cess-polkadot-v0.9.42"
version = '5.0.0'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/CESSProject/substrate'
branch = "cess-polkadot-v0.9.42"
version = '4.0.0-dev'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/CESSProject/substrate'
branch = "cess-polkadot-v0.9.42"
version = '7.0.0'

[dev-dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/CESSProject/substrate'
branch = "cess-polkadot-v0.9.42"
version = '4.0.0-dev'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/CESSProject/substrate'
branch = "cess-polkadot-v0.9.42"
version = '7.0.0'

# local dependencies
[dependencies.pallet-file-bank]
default-features = false
path = '../file-bank'

# local dependencies
[dependencies.pallet-sminer]
default-features = false
path = '../sminer'

# local dependencies
[dependencies.pallet-tee-worker]
default-features = false
path = '../tee-worker'

# local dependencies
[dependencies.pallet-storage-handler]
default-features = false
path = '../storage-handler'

[dev-dependencies.frame-support-test]
default-features = false
git = 'https://github.com/CESSProject/substrate'
branch = "cess-polkadot-v0.9.42"
version = '3.0.0'

[dev-dependencies.pallet-balances]
#default-features = false
git = 'https://github.com/CESSProject/substrate'
branch = "cess-polkadot-v0.9.42"
version = '4.0.0-dev'

[dev-dependencies.pallet-scheduler]
#default-features = false
git = 'https://github.com/CESSProject/substrate'
branch = "cess-polkadot-v0.9.42"
version = '4.0.0-dev'

[dev-dependencies]
pallet-cess-staking = { path = '../staking', version = '4.0.0-dev', default-features = false}
sp-staking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
sp-npos-elections = { version = "4.0.0-dev", git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
frame-election-provider-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
pallet-session = { version = "4.0.0-dev", default-features = false,  git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
pallet-bags-list = { version = "4.0.0-dev", git = "https://github.com/CESSProject/substrate", branch = "cess-polkadot-v0.9.42" }
pallet-scheduler-credit = { default-features = false, path = '../scheduler-credit'}
cp-cess-common = { path = '../../primitives/common', default-features = false }
pallet-oss = { path = '../oss', default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-benchmarking/std",
	"pallet-sminer/std",
	"pallet-file-bank/std",
	"pallet-tee-worker/std",
	"cp-cess-common/std",
	"cp-cess-common/std",
	"pallet-sminer-reward/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"pallet-cess-staking/runtime-benchmarks",
]
