[package]
name = "pallet-audit"
authors = ["CESS LAB"]
version = "0.7.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/CESSProject/cess"
description = "FRAME pallet for segment management"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde = { workspace = true, optional = true }
codec = { version = "3.2.2", package = "parity-scale-codec", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive"] }
log = { workspace = true }
pallet-cess-staking = { path = '../staking', version = '4.0.0-dev', default-features = false }
pallet-preimage = { workspace = true }

# local pallet
cp-bloom-filter = { path = '../../primitives/bloom-filter', default-features = false }
cp-scheduler-credit = { path = '../../primitives/scheduler-credit', default-features = false }
cp-cess-common = { path = '../../primitives/common', default-features = false }
cp-enclave-verify = { path = '../../primitives/enclave-verify', default-features = false }
pallet-cess-treasury = { default-features = false, path = "../cess-treasury" }

frame-benchmarking = { workspace = true, optional = true }

frame-support = { workspace = true }

frame-system = { workspace = true }

sp-io = { workspace = true }

sp-std = { workspace = true }

pallet-balances = { workspace = true }

sp-core = { workspace = true }

pallet-timestamp = { workspace = true }

sp-runtime = { workspace = true }

# local dependencies
pallet-file-bank = { default-features = false, path = '../file-bank' }
# local dependencies
pallet-sminer = { default-features = false, path = '../sminer' }
# local dependencies
pallet-tee-worker = { default-features = false, path = '../tee-worker' }
# local dependencies
pallet-storage-handler = { default-features = false, path = '../storage-handler' }

[dev-dependencies]
frame-support-test = { workspace = true }
pallet-balances = { workspace = true }
pallet-scheduler = { workspace = true }
pallet-cess-staking = { path = '../staking', version = '4.0.0-dev', default-features = false}
sp-staking = { workspace = true }
sp-npos-elections = { workspace = true }
frame-election-provider-support = { workspace = true }
pallet-session = { workspace = true }
pallet-bags-list = { workspace = true }
pallet-scheduler-credit = { default-features = false, path = '../scheduler-credit'}
cp-cess-common = { path = '../../primitives/common', default-features = false }
pallet-oss = { path = '../oss', default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-benchmarking/std",
	"pallet-sminer/std",
	"pallet-file-bank/std",
	"pallet-tee-worker/std",
	"cp-cess-common/std",
	"cp-cess-common/std",
	"pallet-cess-treasury/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"pallet-cess-staking/runtime-benchmarks",
]
