[package]
name = "pallet-cacher"
version = "0.5.3"
edition = "2021"

[dependencies]
log = { version = "0.4.14", default-features = false }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
sp-std = { version = "4.0.0", default-features = false, git = "https://github.com/CESSProject/substrate", branch = "monthly-2022-04-cess" }
sp-runtime = { version = "6.0.0", default-features = false, git = "https://github.com/CESSProject/substrate", branch = "monthly-2022-04-cess" }
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate", branch = "monthly-2022-04-cess" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/CESSProject/substrate", branch = "monthly-2022-04-cess" }
cp-cess-common = { path = '../../primitives/common', version = '0.1.0', default-features = false }
frame-benchmarking = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/CESSProject/substrate.git', branch = 'monthly-2022-04-cess', optional = true}

[dev-dependencies]
sp-core = {version = '6.0.0', git = 'https://github.com/CESSProject/substrate.git', default-features = false, branch = 'monthly-2022-04-cess'}
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/CESSProject/substrate.git", branch = "monthly-2022-04-cess" }
sp-io = {version = '6.0.0', git = 'https://github.com/CESSProject/substrate.git', default-features = false, branch = 'monthly-2022-04-cess'}

[features]
default = ["std"]
std = [
	"log/std",
	"codec/std",
	"scale-info/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"cp-cess-common/std",
	"frame-benchmarking/std",
]

runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]
